refactor(plugin): Load & Main class change

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ModerationTools
 version: 1.0
 api-version: 1.19
 author: https://github.com/enes-th/minecraft-moderations-tools
-main: enes.plugin.moderation.Main
+main: gg.enes.moderation.Main
 commands:
   report:
     description: Report a player
@@ -19,3 +19,4 @@ commands:
     description: View a player's information
     usage: /<command> <player>
     permission: moderator.use.player
+load: POSTWORLD
