--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'gg.enes.moderation'
-version '1.1-SNAPSHOP'
+version '1.2-SNAPSHOP'
 
 repositories {
     mavenCentral()
@@ -17,6 +17,12 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT'
     implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
-}
+    implementation 'org.json:json:20230618'
 
-compileJava.options.encoding = 'UTF-8'
+    if (project.hasProperty('devMode') && devMode.toBoolean()) {
+        compileJava {
+            options.encoding = 'UTF-8'
+        }
+        setLibsDirName('../server/plugins')
+    }
+}
