--- a/modules/core/build.gradle
+++ b/modules/core/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.45.2.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    implementation 'org.reflections:reflections:0.10.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
