--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'org.reflections:reflections:0.10.2'
 
+    testImplementation 'ch.qos.logback:logback-classic:1.5.4'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
@@ -13,6 +14,6 @@ tasks.named('test', Test) {
     useJUnitPlatform()
 
     testLogging {
-        events "passed"
+        events 'passed'
     }
 }
