--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,11 @@
+compileJava {
+    enabled = false
+}
+
+jar {
+    enabled = false
+}
+
 dependencies {
     implementation 'com.zaxxer:HikariCP:5.1.0'
     implementation 'org.xerial:sqlite-jdbc:3.45.2.0'
