--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,3 @@
-compileJava {
-    enabled = false
-}
-
 jar {
     enabled = false
 }
@@ -13,7 +9,9 @@ dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'org.reflections:reflections:0.10.2'
 
-    testImplementation 'ch.qos.logback:logback-classic:1.5.4'
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
