--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:5.1.0'
     implementation 'org.xerial:sqlite-jdbc:3.45.2.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'redis.clients:jedis:5.1.3'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'org.reflections:reflections:0.10.2'
 
