--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "java-library"
+}
+
 version '2.0-SNAPSHOT'
 
 repositories {
@@ -7,6 +11,19 @@ repositories {
 }
 
 dependencies {
-    implementation project(':core')
-    compileOnly 'org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT'
+    api project(':core')
+    compileOnly 'org.spigotmc:spigot-api:1.20.6-R0.1-SNAPSHOT'
+}
+
+processResources {
+    filesMatching('plugin.yml') {
+        expand project.properties
+    }
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    from(project(":core").sourceSets.main.output)
+    from(configurations.compileClasspath.filter { it.name.endsWith('jar') }.collect { zipTree(it) })
 }
