--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -5,3 +5,10 @@ api-version: '1.20'
 description: Moderation tools for Minecraft servers.
 author: Enes Tahiri <125091714+e-enes@users.noreply.github.com>
 website: https://github.com/e-enes/moderation-tools
+libraries:
+  - com.zaxxer:HikariCP:5.1.0
+  - org.xerial:sqlite-jdbc:3.45.2.0
+  - mysql:mysql-connector-java:8.0.33
+  - com.github.ben-manes.caffeine:caffeine:3.1.8
+  - org.slf4j:slf4j-api:2.0.13
+  - ch.qos.logback:logback-classic:1.5.6
